Your commit message here

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button onclick="search('technology')">Technology</button>
         <input type="text" id="se" placeholder="Search...">
         
-        <button onclick="search(`${document.getElementById('se').value}`)" id="merasearch">search news</button>
+        <button onclick="search(`${document.getElementById('se').value}`)" id="merasearch">Search News</button>
     </nav>
     
     <ul id="container"></ul>
